// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaintedUsername Snapshots should match snapshot with URL paint (solid color fallback) 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "position": "relative",
    }
  }
>
  <RNCMaskedView>
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          UrlPaintUser: 
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "rgba(255, 165, 0, 1.000)",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "position": "relative",
              },
              undefined,
            ]
          }
        >
          <View
            contentFit="cover"
            decodeFormat="rgb"
            onError={[Function]}
            onLoadEnd={[Function]}
            onLoadStart={[Function]}
            placeholderContentFit="cover"
            recyclingKey="https://example.com/paint.png"
            source={
              {
                "uri": "https://example.com/paint.png",
              }
            }
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="expo-image"
            transition={500}
            useAppleWebpCodec={true}
          />
          <View
            pointerEvents="none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#fafafa0F",
                    "borderCurve": "continuous",
                    "borderRadius": 16,
                    "overflow": "hidden",
                  },
                  [
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    {
                      "borderRadius": 0,
                    },
                    {},
                  ],
                ]
              }
            >
              <View
                pointerEvents="none"
                style={
                  [
                    {
                      "bottom": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": 180,
                    },
                    {
                      "animationDuration": "1450ms",
                      "animationIterationCount": "infinite",
                      "animationName": {
                        "0%": {
                          "opacity": 0.2,
                          "transform": [
                            {
                              "translateX": -180,
                            },
                          ],
                        },
                        "100%": {
                          "opacity": 0.2,
                          "transform": [
                            {
                              "translateX": 520,
                            },
                          ],
                        },
                        "35%": {
                          "opacity": 0.85,
                        },
                      },
                      "animationTimingFunction": "ease-in-out",
                    },
                  ]
                }
              >
                <ViewManagerAdapter_ExpoLinearGradient
                  colors={
                    [
                      16777215,
                      788529151,
                      16777215,
                    ]
                  }
                  endPoint={
                    [
                      1,
                      0.5,
                    ]
                  }
                  locations={
                    [
                      0,
                      0.5,
                      1,
                    ]
                  }
                  startPoint={
                    [
                      0,
                      0.5,
                    ]
                  }
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#fafafa",
              "fontFamily": "Montserrat_400Regular",
              "fontStyle": "normal",
              "fontVariant": undefined,
              "fontWeight": undefined,
              "textAlign": "left",
            },
            [
              {
                "fontWeight": "bold",
                "opacity": 0,
              },
              undefined,
            ],
          ]
        }
        textBreakStrategy="simple"
      >
        UrlPaintUser: 
      </Text>
    </View>
  </RNCMaskedView>
</View>
`;

exports[`PaintedUsername Snapshots should match snapshot with fallback color only 1`] = `
<Text
  style={
    [
      {
        "fontSize": 16,
        "lineHeight": 24,
      },
      {
        "color": "#fafafa",
        "fontFamily": "Montserrat_400Regular",
        "fontStyle": "normal",
        "fontVariant": undefined,
        "fontWeight": undefined,
        "textAlign": "left",
      },
      [
        {
          "fontSize": 14,
          "fontWeight": "bold",
          "lineHeight": 17,
        },
        {
          "color": "#9B59B6",
        },
        undefined,
      ],
    ]
  }
  textBreakStrategy="simple"
>
  FallbackUser: 
</Text>
`;

exports[`PaintedUsername Snapshots should match snapshot with linear gradient paint 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "position": "relative",
    }
  }
>
  <RNCMaskedView
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "textShadowColor": "rgba(254, 118, 148, 1.000)",
                  "textShadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "textShadowRadius": 0.1,
                },
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          RoseGoldUser: 
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          colors={
            [
              4294866580,
              4294953140,
              4294921587,
            ]
          }
          endPoint={
            [
              1,
              0.5,
            ]
          }
          locations={
            [
              0,
              0.5,
              1,
            ]
          }
          startPoint={
            [
              0,
              0.5000000000000001,
            ]
          }
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#fafafa",
              "fontFamily": "Montserrat_400Regular",
              "fontStyle": "normal",
              "fontVariant": undefined,
              "fontWeight": undefined,
              "textAlign": "left",
            },
            [
              {
                "fontWeight": "bold",
                "opacity": 0,
              },
              undefined,
            ],
          ]
        }
        textBreakStrategy="simple"
      >
        RoseGoldUser: 
      </Text>
    </View>
  </RNCMaskedView>
  <RNCMaskedView>
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          RoseGoldUser: 
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          colors={
            [
              4294866580,
              4294953140,
              4294921587,
            ]
          }
          endPoint={
            [
              1,
              0.5,
            ]
          }
          locations={
            [
              0,
              0.5,
              1,
            ]
          }
          startPoint={
            [
              0,
              0.5000000000000001,
            ]
          }
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#fafafa",
              "fontFamily": "Montserrat_400Regular",
              "fontStyle": "normal",
              "fontVariant": undefined,
              "fontWeight": undefined,
              "textAlign": "left",
            },
            [
              {
                "fontWeight": "bold",
                "opacity": 0,
              },
              undefined,
            ],
          ]
        }
        textBreakStrategy="simple"
      >
        RoseGoldUser: 
      </Text>
    </View>
  </RNCMaskedView>
</View>
`;

exports[`PaintedUsername Snapshots should match snapshot with long username 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "position": "relative",
    }
  }
>
  <RNCMaskedView>
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          VeryLongUsernameForTestingPurposes: 
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          colors={
            [
              4291049729,
              4294940210,
              4291049729,
            ]
          }
          endPoint={
            [
              1,
              0.5,
            ]
          }
          locations={
            [
              0,
              0.5,
              1,
            ]
          }
          startPoint={
            [
              0,
              0.5000000000000001,
            ]
          }
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#fafafa",
              "fontFamily": "Montserrat_400Regular",
              "fontStyle": "normal",
              "fontVariant": undefined,
              "fontWeight": undefined,
              "textAlign": "left",
            },
            [
              {
                "fontWeight": "bold",
                "opacity": 0,
              },
              undefined,
            ],
          ]
        }
        textBreakStrategy="simple"
      >
        VeryLongUsernameForTestingPurposes: 
      </Text>
    </View>
  </RNCMaskedView>
</View>
`;

exports[`PaintedUsername Snapshots should match snapshot with multiple shadows 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "position": "relative",
    }
  }
>
  <RNCMaskedView
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "textShadowColor": "rgba(0, 0, 0, 1.000)",
                  "textShadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "textShadowRadius": 0.1,
                },
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          DivisionUser: 
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          colors={
            [
              4288433174,
              4291328050,
              4286725135,
            ]
          }
          endPoint={
            [
              1,
              0.5,
            ]
          }
          locations={
            [
              0,
              0.5,
              1,
            ]
          }
          startPoint={
            [
              0,
              0.5000000000000001,
            ]
          }
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#fafafa",
              "fontFamily": "Montserrat_400Regular",
              "fontStyle": "normal",
              "fontVariant": undefined,
              "fontWeight": undefined,
              "textAlign": "left",
            },
            [
              {
                "fontWeight": "bold",
                "opacity": 0,
              },
              undefined,
            ],
          ]
        }
        textBreakStrategy="simple"
      >
        DivisionUser: 
      </Text>
    </View>
  </RNCMaskedView>
  <RNCMaskedView
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "textShadowColor": "rgba(156, 76, 22, 1.000)",
                  "textShadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "textShadowRadius": 1,
                },
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          DivisionUser: 
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          colors={
            [
              4288433174,
              4291328050,
              4286725135,
            ]
          }
          endPoint={
            [
              1,
              0.5,
            ]
          }
          locations={
            [
              0,
              0.5,
              1,
            ]
          }
          startPoint={
            [
              0,
              0.5000000000000001,
            ]
          }
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#fafafa",
              "fontFamily": "Montserrat_400Regular",
              "fontStyle": "normal",
              "fontVariant": undefined,
              "fontWeight": undefined,
              "textAlign": "left",
            },
            [
              {
                "fontWeight": "bold",
                "opacity": 0,
              },
              undefined,
            ],
          ]
        }
        textBreakStrategy="simple"
      >
        DivisionUser: 
      </Text>
    </View>
  </RNCMaskedView>
  <RNCMaskedView>
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          DivisionUser: 
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          colors={
            [
              4288433174,
              4291328050,
              4286725135,
            ]
          }
          endPoint={
            [
              1,
              0.5,
            ]
          }
          locations={
            [
              0,
              0.5,
              1,
            ]
          }
          startPoint={
            [
              0,
              0.5000000000000001,
            ]
          }
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#fafafa",
              "fontFamily": "Montserrat_400Regular",
              "fontStyle": "normal",
              "fontVariant": undefined,
              "fontWeight": undefined,
              "textAlign": "left",
            },
            [
              {
                "fontWeight": "bold",
                "opacity": 0,
              },
              undefined,
            ],
          ]
        }
        textBreakStrategy="simple"
      >
        DivisionUser: 
      </Text>
    </View>
  </RNCMaskedView>
</View>
`;

exports[`PaintedUsername Snapshots should match snapshot with radial gradient paint 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "position": "relative",
    }
  }
>
  <RNCMaskedView
    pointerEvents="none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "textShadowColor": "rgba(0, 96, 128, 1.000)",
                  "textShadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "textShadowRadius": 0.1,
                },
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          FlowerchildUser: 
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth="100%"
          focusable={false}
          height="100%"
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "flex": 0,
                "height": "100%",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx="50%"
                cy="50%"
                fx="50%"
                fy="50%"
                gradient={
                  [
                    0,
                    -10172196,
                    0.5,
                    -16738636,
                    1,
                    -16752512,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="paint-layer-0-radial"
                rx="50%"
                ry="50%"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                {
                  "brushRef": "paint-layer-0-radial",
                  "type": 1,
                }
              }
              height="100%"
              propList={
                [
                  "fill",
                ]
              }
              width="100%"
              x="0"
              y="0"
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#fafafa",
              "fontFamily": "Montserrat_400Regular",
              "fontStyle": "normal",
              "fontVariant": undefined,
              "fontWeight": undefined,
              "textAlign": "left",
            },
            [
              {
                "fontWeight": "bold",
                "opacity": 0,
              },
              undefined,
            ],
          ]
        }
        textBreakStrategy="simple"
      >
        FlowerchildUser: 
      </Text>
    </View>
  </RNCMaskedView>
  <RNCMaskedView>
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "transparent",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 16,
                "lineHeight": 24,
              },
              {
                "color": "#fafafa",
                "fontFamily": "Montserrat_400Regular",
                "fontStyle": "normal",
                "fontVariant": undefined,
                "fontWeight": undefined,
                "textAlign": "left",
              },
              [
                [
                  {
                    "color": "black",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "lineHeight": 17,
                  },
                  undefined,
                  {},
                ],
                {
                  "color": "black",
                },
              ],
            ]
          }
          textBreakStrategy="simple"
        >
          FlowerchildUser: 
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "position": "relative",
        }
      }
    >
      <View
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ]
        }
      >
        <RNSVGSvgView
          bbHeight="100%"
          bbWidth="100%"
          focusable={false}
          height="100%"
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "flex": 0,
                "height": "100%",
                "width": "100%",
              },
            ]
          }
          width="100%"
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGDefs>
              <RNSVGRadialGradient
                cx="50%"
                cy="50%"
                fx="50%"
                fy="50%"
                gradient={
                  [
                    0,
                    -10172196,
                    0.5,
                    -16738636,
                    1,
                    -16752512,
                  ]
                }
                gradientTransform={null}
                gradientUnits={0}
                name="paint-layer-0-radial"
                rx="50%"
                ry="50%"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                {
                  "brushRef": "paint-layer-0-radial",
                  "type": 1,
                }
              }
              height="100%"
              propList={
                [
                  "fill",
                ]
              }
              width="100%"
              x="0"
              y="0"
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#fafafa",
              "fontFamily": "Montserrat_400Regular",
              "fontStyle": "normal",
              "fontVariant": undefined,
              "fontWeight": undefined,
              "textAlign": "left",
            },
            [
              {
                "fontWeight": "bold",
                "opacity": 0,
              },
              undefined,
            ],
          ]
        }
        textBreakStrategy="simple"
      >
        FlowerchildUser: 
      </Text>
    </View>
  </RNCMaskedView>
</View>
`;
